[tool.poetry]
name = "tinykakeibo"
version = "0.1.0"
description = "App de gestão financeira pessoal inspirado no método Kakeibo, com foco em simplicidade e organização."
authors = ["Nercino Neto <njbneto21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
